--- a/config.yaml.example
+++ b/config.yaml.example
@@ -491,12 +491,12 @@ chats:
 #    - Добавьте только свой chat_id в секцию chats
 #    - Постепенно настраивайте параметры под свои нужды
 #
-# 2. ДЛЯ АКТИВНЫХ КАНАЛОВ (много сообщений):
+# 2. ДЛЯ АКТИВНЫХ КАНАЛОВ/ГРУПП (много сообщений):
 #    - Установите min_messages: 5-10
 #    - Установите max_topics: 10-20
 #    - Установите show_users: false (чтобы не перегружать вывод)
 #
-# 3. ДЛЯ НЕБОЛЬШИХ КАНАЛОВ (мало сообщений):
+# 3. ДЛЯ НЕБОЛЬШИХ КАНАЛОВ/ГРУПП (мало сообщений):
 #    - Установите min_messages: 1-2
 #    - Установите max_topics: 0 (без ограничения)
 #    - Можно включить show_users: true
